lock gitea under a gig of mem, remove std-notes, backup gdrive here

--- a/gitea/docker-compose.yml
+++ b/gitea/docker-compose.yml
@@ -1,4 +1,5 @@
-version: "3.5"
+version: "3.8"
+#ideally, i'd like to upgrade docker-compose version 1.25.5 at least to use v3.8 and later, where mem_limit works outside of a swarm deploy.
 
 networks:
   gitea:
@@ -26,6 +27,7 @@ services:
       - "traefik.http.routers.gitea.entrypoints=websecure"
       - "traefik.http.routers.gitea.tls.certresolver=myhttpchallenge"
       - "traefik.http.services.gitea.loadbalancer.server.port=3000"
+    mem_limit: 1g
 
   db:
     container_name: gitea_db
