add nextcloud config, but it's so slow i'm just leaving it here to say i'm happy that i managed to troubleshoot & deploy it

--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "./letsencrypt:/letsencrypt"
       - "./traefik.toml:/etc/traefik/traefik.toml"
+      - "./config:/etc/traefik/config"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.traefik.rule=Host(`rproxy.hugowillaume.com`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
