--- a/wizz/docker-compose.yml
+++ b/wizz/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       context: ./
       dockerfile: ./Dockerfile
     container_name: wizz
+    restart: always
     networks:
       - traefik_default
     labels:
